--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,9 +17,17 @@ jobs:
       matrix:
         mongodb-version: [4.0.18]
         python-version: [3.6, 3.8]
+        java-version: [1.8]
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup Java JDK # Nextflow relies on JDK
+      uses: actions/setup-java@v1.4.3
+      # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
+      with:
+        java-version: ${{ matrix.java-version }}
+    - name: Set up Nextflow
+      run: sudo bash -c "export JAVA_CMD="$(which java)" && cd /usr/bin && (curl -s https://get.nextflow.io | bash) && chmod +x nextflow"
     - name: Set up MongoDB sharded environment ${{ matrix.mongodb-version }}
       run: sudo bash scripts/create_mongo_single_node_sharded_env.sh ${{ matrix.mongodb-version }}
     - name: Set up Python ${{ matrix.python-version }}
