Fix Nextflow config comments

--- a/tests/resources/nextflow.config
+++ b/tests/resources/nextflow.config
@@ -1,4 +1,4 @@
-# Use finish error strategy to finish pending jobs when one of the jobs in a pipeline fails
+// Use finish error strategy to finish pending jobs when one of the jobs in a pipeline fails
 process {
  errorStrategy = 'finish'
 }
