--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ test:
   stage: test
   image: python:3.8.7-slim-buster
   before_script:
-    - sudo bash -c "export JAVA_CMD="$(which java)" && cd /usr/bin && (curl -s https://get.nextflow.io | bash) && chmod 755 nextflow"
+    - mkdir /tmp/nextflow && cd /tmp/nextflow && (curl -s https://get.nextflow.io | bash) && chmod 755 nextflow $$ export PATH=/tmp/:$PATH
     - /usr/bin/nextflow -version
     - python -m pip install --upgrade pip
     - pip install pytest certifi twine
