--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,14 @@
 [metadata]
 description-file = README.md
+
+
+[check-manifest]
+ignore =
+
+    scripts/*
+    tests/*
+    tests/*/*
+    tests/*/*/*
+    tests/*/*/*/*
+    .gitlab-ci.yml
+
