--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: [4.0.18, ubuntu2204-6.0.6]
+        mongodb-version: [4.0.18]
         mongosh-version: [1.10.6]
         python-version: [3.8, 3.9]
         java-version: [1.11]
