--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,27 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: [4.0.18]
+        mongodb-version: [ubuntu2204-6.0.6]
+        mongotools_version : [ubuntu2204-x86_64-100.13.0]
         mongosh-version: [1.10.6]
         python-version: [3.8, 3.9]
         java-version: [1.11]
-        nextflow-version: [21.10.5, 22.10.7]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Java JDK # Nextflow relies on JDK
-      uses: actions/setup-java@v1.4.3
-      # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
-      with:
-        java-version: ${{ matrix.java-version }}
-    - name: Set up Nextflow
-      run: |
-        mkdir /tmp/nextflow && cd /tmp/nextflow
-        wget -qO- https://github.com/nextflow-io/nextflow/releases/download/v${{ matrix.nextflow-version }}/nextflow-${{ matrix.nextflow-version }}-all | bash
-        echo "/tmp/nextflow" >> $GITHUB_PATH
-        cd -
-    - name: Set up MongoDB ${{ matrix.mongodb-version }} and Mongosh ${{ matrix.mongosh-version }} sharded environment
-      run: sudo bash scripts/create_mongo_single_node_sharded_env.sh ${{ matrix.mongodb-version }} ${{ matrix.mongosh-version }}
+    - name: Set up MongoDB ${{ matrix.mongodb-version }} Mongosh ${{ matrix.mongosh-version }} and Mongo tools ${{ matrix.mongotools_version }} sharded environment
+      run: sudo bash scripts/create_mongo_single_node_sharded_env.sh ${{ matrix.mongodb-version }} ${{ matrix.mongosh-version }} ${{ matrix.mongotools_version }}
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
